fix alignment

--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@
     padding: 0;
 }
 
+.con {
+    text-align: center;
+}
+
 body {
     font-size: 16px;
     line-height: 1.5;
